# AIDevHub

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  latest.json  ui-redesign.pen
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
.release-inspect/: latest.json
app-v2/: README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
app-v2/scripts/: generate-latest-json.mjs  update-release-version.mjs
app-v2/src/: App.tsx  main.tsx
app-v2/src-tauri/: Cargo.toml  hooks.nsh  tauri.conf.json
app-v2/src-tauri/crates/aidevhub-core/: Cargo.toml
app-v2/src-tauri/crates/aidevhub-core/src/: app_settings.rs  config_sync.rs  health_check.rs  lib.rs  mcp_registry.rs  model.rs  ops.rs  skill_repo.rs
app-v2/src-tauri/crates/aidevhub-core/tests/: app_settings.rs  backup_ops.rs  config_sync.rs  mcp_registry.rs  mcp_registry_external_sync.rs  ops.rs  skill_repo.rs  source_file.rs
app-v2/tests/: api-config-accept.test.mjs  app-config-error-dismiss.test.tsx  app-mcp-registry-sync-flow.test.mjs  app-startup-config-check.test.mjs  backup-timeline.test.mjs  backups-page-table-layout.test.mjs  config-change-dialog.test.mjs  config-check-flow.test.mjs  config-check-state.test.mjs  config-confirm-flow-runtime.test.mjs  config-error-display.test.mjs  format.test.mjs  overview-page-removal.test.mjs  page-content.test.mjs  release-scripts.test.mjs  (+15 more)
docs/: MCP编辑功能实施计划.md  MCP编辑功能设计方案.md  发布新版本标准流程.md  技术实现方案文档.md  技能管理功能开发文档.md  接口文档.md  需求规格文档.md
openspec/: project.md
(+102 files in other folders)
