[package]
name = "aidevhub-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"
tempfile = "3"
thiserror = "2"
toml_edit = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1"
